--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zhurong-cli",
+  "name": "zhurong-cli-po",
   "version": "1.0.0",
   "description": "simple vue cli",
   "main": "cli.js",
