--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": {
-    "name": "T-Roc",
-    "email": "lxp_work@163.com"
+    "name": "europopo",
+    "email": "1004667082@qq.com"
   },
   "license": "MIT",
   "dependencies": {
